--- a/laurent-sewer/src/app/app.component.html
+++ b/laurent-sewer/src/app/app.component.html
@@ -35,7 +35,7 @@
     <svg width="11" height="21" viewBox="0 0 11 21" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M7.90654 21L6.76114 21C-2.23534 20.6625 -2.27207 0.0514892 6.76115 0L7.90653 3.09509e-05V4.77271H6.76115C3.9978 4.81538 3.99375 16.1765 6.76114 16.2273H7.90654V21ZM11 -7.9198e-05L8.93768 7.43397e-06L8.93768 4.77268L11 4.77255V-7.9198e-05ZM11 16.2271L8.93769 16.2273V21L11 20.9998V16.2271Z"/>
     </svg>
-    <span>079 387 95 90</span>
+    <span>+41 79 387 95 90</span>
   </a>
   <a href="mailto:sewer.laurent@hotmail.com">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
