fix source image

--- a/laurent-sewer/src/app/app.component.html
+++ b/laurent-sewer/src/app/app.component.html
@@ -21,7 +21,7 @@
 
 
 
-<img id="photo" src="../assets/png/laurent.png" alt="Laurent Sewer">
+<img id="photo" src="./assets/png/laurent.png" alt="Laurent Sewer">
 
 
 <div id="first_infos">
@@ -278,18 +278,18 @@
 
 <b>Projets</b>
 <div class="projects">
-  <a class="project" href="../assets/projects/origami-previewer/index.html">
+  <a class="project" href="./assets/projects/origami-previewer/index.html">
     <span>Origami Previewer<br><br>janvier 2019 - decembre 2020</span>
-    <img src="../assets/gif/origami_preview.gif" alt="Mon projet qui permet de générer une représentation 3D d'une étoile en origami">
+    <img src="./assets/gif/origami_preview.gif" alt="Mon projet qui permet de générer une représentation 3D d'une étoile en origami">
   </a>
 
-  <a class="project" href="../assets/projects/html-minigames/index.html">
+  <a class="project" href="./assets/projects/html-minigames/index.html">
     <span>HTML Mini Games<br><br>decembre 2018 - mars 2019</span>
-    <img style="width:240px; padding:20px" src="../assets/gif/html-minigames.gif" alt="Mes projets HTML">
+    <img style="width:240px; padding:20px" src="./assets/gif/html-minigames.gif" alt="Mes projets HTML">
   </a>
 
-  <a class="project" href="../assets/projects/csharp-minigames/index.html">
+  <a class="project" href="./assets/projects/csharp-minigames/index.html">
     <span>C# Mini Games<br><br>decembre 2018 - mars 2019</span>
-    <img style="padding: 27.425px 0;" src="../assets/gif/csharp-minigames.gif" alt="Mes projets C#">
+    <img style="padding: 27.425px 0;" src="./assets/gif/csharp-minigames.gif" alt="Mes projets C#">
   </a>
 </div>
