--- a/laurent-sewer/src/app/card/card.component.html
+++ b/laurent-sewer/src/app/card/card.component.html
@@ -1,14 +1,14 @@
 <div class="container" [style.background]="bkcolor" [style.color]="fgcolor" [class.flipped]="toggleFlipped" (click)="toggleFlipped = !toggleFlipped">
   <div class="front">
-    <img class="photo" src="../../assets/png/{{image}}.png" alt="{{name}}">
+    <img class="photo" src="./assets/png/{{image}}.png" alt="{{name}}">
     <b [style.color]="color">{{name}}</b>
   </div>
   <div class="back">
       <b [style.color]="color">{{name}}</b>
-      <a href="{{website}}"><img class="company_logo" src="../assets/png/{{logo}}.png" alt="{{logo}}" (click)="toggleFlipped = false"></a>
+      <a href="{{website}}"><img class="company_logo" src="./assets/png/{{logo}}.png" alt="{{logo}}" (click)="toggleFlipped = false"></a>
       <span class="role">{{role}}</span>
       <p class="item">Numéro <a class="link" href="tel:{{formatedPhone}}" (click)="toggleFlipped = false">{{phone}}</a></p>
       <p class="item">Email <a class="link" href="mailto:{{mail}}" (click)="toggleFlipped = false">{{mail}}</a></p>
-      <p class="item">Linkedin <a class="link" href="{{linkedin}}" target="_blank" (click)="toggleFlipped = false"><img class="logo" src="../assets/svg/linkedin.svg"></a></p>
+      <p class="item">Linkedin <a class="link" href="{{linkedin}}" target="_blank" (click)="toggleFlipped = false"><img class="logo" src="./assets/svg/linkedin.svg"></a></p>
   </div>
 </div>
