--- a/laurent-sewer/src/app/competence/competence.component.html
+++ b/laurent-sewer/src/app/competence/competence.component.html
@@ -1,5 +1,5 @@
 <div class="container" [class.opened]="toggleViewDescritpion" [class.have_description]="description!==undefined" (click)="click()">
-  <img class="logo" src="../assets/svg/{{image}}.svg" alt="">
+  <img class="logo" src="./assets/svg/{{image}}.svg" alt="">
   <span class="name" [style.background]="bkcolor" [style.color]="fgcolor">{{name}}</span>
   <div class="percentage">
     <div class="bar" [style.background]="color" [style.width]="percentage+'%'"></div>
