--- a/laurent-sewer/src/app/app.component.html
+++ b/laurent-sewer/src/app/app.component.html
@@ -77,7 +77,7 @@
   bkcolor="#a178db"
   color="#3B009B"
   image="csharp"
-  description="Le C# est le premier langage de programmation que j'ai appris durant ma pré-formation à l'Orif d'Aigle. (après les langages d'entraînement comme le JustBasic qui m'a permis d'apprendre les bases)">
+  description="Le C# est le premier langage de programmation que j'ai appris durant ma préformation à l'Orif d'Aigle. (après les langages d'entraînement comme le JustBasic qui m'a permis d'apprendre les bases)">
 </competence>
 <competence
   name="Java"
@@ -106,7 +106,7 @@
   bkcolor="#E23237"
   fgcolor="#ffffff"
   image="angular"
-  description="J'ai découvert Angular a Involi, pour la nouvelle version du site. Je trouve sa extrèmement pratique et propre, mes nouveaux projets seront surement tous fait avec Angular. (ce CV en ligne par exemple)">
+  description="J'ai découvert Angular a Involi, pour la nouvelle version du site. Je trouve sa extrêmement pratique et propre, mes nouveaux projets seront surement tous fais avec Angular. (ce CV en ligne par exemple)">
 </competence>
 <competence
   name="Ionic"
@@ -115,7 +115,7 @@
   fgcolor="#ffffff"
   bkcolor="#478AFF"
   image="ionic"
-  description="J'ai utilisé Ionic pour un cours inter entreprise durant ma formation, je n'ai malheureusement jamais pus finir le cours pour cause de maladie, mais j'ai beaucoup apprécié utiliser ce framework. Je l'ai finallement retrouvé pour un projet d'Involi.">
+  description="J'ai utilisé Ionic pour un cours inter entreprise durant ma formation, je n'ai malheureusement jamais pus finir le cours pour cause de maladie, mais j'ai beaucoup apprécié utiliser ce framework. Je l'ai finalement retrouvé pour un projet d'Involi.">
 </competence>
 <competence
   name="Sass"
@@ -124,7 +124,7 @@
   bkcolor="#f8f9fa"
   fgcolor="#CD6799"
   image="sass"
-  description="J'ai appris le Sass à involi, en même temps que le typescript avec Angular. Il est très simple de passer du Css au Sass, donc je le métrise autant bien que le css.">
+  description="J'ai appris le Sass à involi, en même temps que le typescript avec Angular. Il est très simple de passer du Css au Sass, donc je le maitrise  autant bien que le css.">
 </competence>
 <competence
   name="Bootstrap"
@@ -176,7 +176,7 @@
   bkcolor="#4285f4"
   fgcolor="#fbbc04"
   image="gmap"
-  description="J'ai beaucoup utilisé cette librarie lors de mon stage chez Involi. J'ai appris tout seul à l'utiliser et je suis capable de faire beaucoup de choses avec.">
+  description="J'ai beaucoup utilisé cette librairie lors de mon stage chez Involi. J'ai appris tout seul à l'utiliser et je suis capable de faire beaucoup de choses avec.">
 </competence>
 <competence
   name="MySQL"
@@ -185,7 +185,7 @@
   bkcolor="#5d87a1"
   fgcolor="#f8981d"
   image="sql"
-  description="J'ai appris a utiliser MySQL durant un cours inter entreprise, j'ai trouvé le cours assez avancé et j'ai appris pas mal de choses utiles">
+  description="J'ai appris à utiliser MySQL durant un cours inter entreprise, j'ai trouvé le cours assez avancé et j'ai appris pas mal de choses utiles">
 </competence>
 <competence
   name="XML"
@@ -211,29 +211,31 @@
     <element
       bkcolor="#3C99D4"
       image="vscode"
-      description="Je travaille essenciellement avec l'éditeur de code Visual studio code."
+      description="Visual Studio Code est le dernier éditeur de code de Microsoft, il est complet et gère des extensions qui permettent de toucher à toutes sortes de languages.<br><br>Je travaille essentiellement avec cet éditeur de code, car il est très polyvalent et je n'ai pas encore trouvé meilleurs à ce jour."
       name="Visual Studio Code">
     </element>
     <element
       bkcolor="#FFC531"
       image="miro"
-      description="J'ai découvert miro à Involi et on ne se sert plus que de ce logiciel pour parler entre nous."
+      description="Miro est un logiciel web qui permet la création simple ou complexe de différents types de schéma principalement pour la programmation, il permet l'édition de plusieurs personnes pour différents projets.<br><br>J'ai découvert miro au travail et il est extrêmement simple de s'en servir à plusieurs, il est parfait pour définir les taches entre plusieurs personnes d'un groupe de travail"
       name="Miro">
     </element>
     <element
       bkcolor="#F05133"
       image="git"
+      description="Git est un logiciel de gestion de versions utilisé massivement par les développeurs pour gérer les différentes étapes du projet.<br><br>Je connais bien git et je maitrise  les commandes de bases, je l'utilise pour presque tous mes projets actuels.."
       name="Git">
     </element>
     <element
     bkcolor="#333333"
     image="figma"
-    description="J'ai découvert Figma récemment et je commence à le prendre en main, c'est très pratique pour les images vectorielles."
+    description="Figma est un éditeur d'images vectoriel.<br><br>J'ai découvert Figma récemment et je commence à le prendre en main, je le trouve extrêmement pratique et il a le grand avantage d'être gratuit."
     name="Figma">
   </element>
   <element
     bkcolor="#E01E5A"
     image="slack"
+    description="Slack est un logiciel de communication professionnel et un logiciel de gestion de projets.<br><br>J'utilisais Slack dans ma derniere entreprise et je trouve que c'est une très bonne alternative aux mails au sein de l'entreprise."
     name="Slack">
   </element>
 </div>
@@ -276,11 +278,11 @@
   </card>
 </div>
 
-<b>Projets</b>
+<b>Projets (personnels)</b>
 <div class="projects">
   <a class="project" href="./assets/projects/origami-previewer/index.html">
     <span>Origami Previewer<br><br>janvier 2019 - decembre 2020</span>
-    <img src="./assets/gif/origami_preview.gif" alt="Mon projet qui permet de générer une représentation 3D d'une étoile en origami">
+    <img src="./assets/gif/origami_preview.gif" alt="Mon projet personnel qui me permet de générer une représentation 3D d'un origami modulaire en forme d'étoile">
   </a>
 
   <a class="project" href="./assets/projects/html-minigames/index.html">
@@ -292,4 +294,6 @@
     <span>C# Mini Games<br><br>decembre 2018 - mars 2019</span>
     <img style="padding: 27.425px 0;" src="./assets/gif/csharp-minigames.gif" alt="Mes projets C#">
   </a>
+
+  <span>et beaucoup d'autres qui n'ont pas été retrouvés ou qui sont protégés par le secret professionnel.</span>
 </div>
