--- a/laurent-sewer/src/app/timeline/timeline.component.html
+++ b/laurent-sewer/src/app/timeline/timeline.component.html
@@ -20,8 +20,8 @@
   endDate="octobre 2020"
   title="Stage à INVOLI SA à Renens"
   [haveDescritpion]="true">
-  <br>Après ma formation, j'ai trouvé une place de stage en entreprise a Renens. J'ai eu l'occasion de m'expérimenter avec jquery et google maps js, car il s'agissait de faire des menus et des fonctionnalités pour une map sur laquelle on affiche des icônes d'avions que les serveurs nous renvoyaient.
-  <br>Durant les 6 derniers mois du stage, j'ai appris à métriser Angular 10 pour la nouvelle version du site.
+  <br>Après ma formation, j'ai trouvé une place de stage en entreprise a Renens. J'ai eu l'occasion de m'expérimenter avec jquery et google maps js, car il s'agissait de faire des menus et des fonctionnalités pour une carte sur laquelle on affiche des icônes d'avions que les serveurs nous renvoyaient.
+  <br>Durant les 6 derniers mois du stage, j'ai appris à maitrise r Angular 10 pour la nouvelle version du site.
   <br><br><a href="https://www.involi.com/" target="_blank">involi.com</a>
 </timeline-element>
 <timeline-element
@@ -31,7 +31,7 @@
   inversed="true"
   [haveDescritpion]="true">
   <br>Durant ma formation en duale au centre Orif, j'ai eu l'occasion de faire un stage chez Evoset.
-  <br>il s'agissait d'un mandat pour créer l'interface graphique d'une application C# qui commande des outils de mesure et de découpe de métal de haute précision.
+  <br>il s'agissait d'un mandat ou je devais implémenter l'interface graphique d'une application C# pour un client.
   <br><br><a href="https://www.evoset.ch/" target="_blank">evoset.ch</a>
 </timeline-element>
 <timeline-element
@@ -39,7 +39,7 @@
   endDate="juin 2020"
   title="Apprentissage de développeur d’application en duale au centre Orif de Pomy"
   [haveDescritpion]="true">
-  <br>Mon apprentissage à commencé par une année au centre EPSIC (École Professionnelle De La Société Industrielle Et Commerciale) de lausanne et a continué pour les 3 dernières années à Genève au CFPT (Centre de Formation Professionnelle Technique). Nous avons étudié un bon nombre de technologies durant ces 4 ans: Java, Javascript, C#, SQL, PHP, Swift, script batch, Microsoft Access, Git, Méthode Agile...
+  <br>Mon apprentissage à commencé par une année au centre EPSIC (École Professionnelle De La Société Industrielle Et Commerciale) de Lausanne et a continué pour les 3 dernières années à Genève au CFPT (Centre de Formation Professionnelle Technique). J'ai étudié un bon nombre de technologies durant ces 4 années: Java, Javascript, C#, SQL, PHP, Swift, script batch, Microsoft Access, Git, Méthode Agile...
 </timeline-element>
 <timeline-element
   startDate="janvier 2016"
@@ -47,14 +47,14 @@
   title="Préformation au centre Orif d'Aigle"
   inversed="true"
   [haveDescritpion]="true">
-  <br>Afin de me préparer aux 4 années de formation pour le CFC de développement d'application, mon formateur m'as conseillé de faire une préformation de 6 mois durant lesquelles je pouvais apprendre librement par mes propres moyens les bases du C# qui est un langage utilisé par l'école de Genêve durant les 3 dernières années, en attendant le début des cours en octobre. j'ai donc pus apprendre les bases et j'ai réalisé un projet en windows form sur VisualStudio. il s'agissait d'un jeu avec un dé, où un héros combattais des ennemis aléatoires.
+  <br>Afin de me préparer à la formation de développeur d'application, l'orif m'a donner une préformation de 6 mois durant lesquelles j'ai apprendris par mes propres moyens les bases du C# qui est le langage utilisé principalement par le CFPT de Genêve pour apprendre durant les 3 dernières années de la formation. En attendant le début des cours en octobre, j'ai pus apprendre les bases et j'ai réalisé un projet avec windows form sur VisualStudio. il s'agissait d'un jeu avec un dé, où un héros combattais des ennemis aléatoires.
 </timeline-element>
 <timeline-element
   startDate="septembre 2015"
   endDate="décembre 2015"
   title="Stage d’informaticien en observation au centre Orif de Pomy"
   [haveDescritpion]="true">
-  <br>À la fin de ma scolarité obligatoire, l'ai m'as contacté pour que j'aille faire un stage au centre orif de Pomy afin d'y découvrir le métier d'informaticien.
+  <br>À la fin de ma scolarité obligatoire, l'AI m'as contacté pour un stage au centre orif de Pomy afin d'y découvrir le métier d'informaticien.
   <br>Durant ces 3 semaines de stage j'ai rapidement compris que ce métier me plaisait beaucoup, surtout pour le développement d'application.
   <br><br><a href="https://www.orif.ch/" target="_blank">orif.ch</a>
 </timeline-element>
